--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.App {
-    text-align: center;
+  .App{
+    font-family: 'Roboto', sans-serif;
   }
   
   .App-header {
-    background-color: #0453f1;
-    padding: 20px;
-    color: white;
+    text-align: center;
   }
   
   .App-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
     gap: 20px;
     margin: 20px;
   }
   
   .grid-item {
+    text-align: left;
     background-color: #f5f5f5;
     padding: 20px;
     border-radius: 5px;
